fix alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -266,7 +266,7 @@ body {
   font-size: 15.7392px;
   line-height: 24px;
   color: #8f9bb7;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .pricing--heading {
